[gd_scene load_steps=14 format=3 uid="uid://cbj7bnjqlxc52"]

[ext_resource type="Theme" uid="uid://b7cej2d60vjv1" path="res://UI/Computer/Shop.tres" id="1_iqbph"]
[ext_resource type="PackedScene" uid="uid://xetjn1k22kut" path="res://UI/Computer/Shop_UI.tscn" id="2_6pl0m"]
[ext_resource type="Theme" uid="uid://7wejusv27ogr" path="res://UI/Computer/Website_Browser.tres" id="2_fxky7"]
[ext_resource type="Texture2D" uid="uid://b03u1ie1y51j4" path="res://Textures/UI/Computer/websites/CarParts.png" id="3_70prc"]
[ext_resource type="Script" path="res://UI/Computer/Page Selector.gd" id="3_uyab6"]
[ext_resource type="Texture2D" uid="uid://covbob5w0qa4s" path="res://Textures/UI/Computer/websites/InventoryManager.png" id="4_0xncc"]
[ext_resource type="Texture2D" uid="uid://7nb1nu4jwkr4" path="res://Textures/UI/Computer/websites/Difficulty Selector.png" id="6_1mjm5"]
[ext_resource type="PackedScene" uid="uid://dyjfrdyxvu7x8" path="res://UI/Computer/Inventory_UI.tscn" id="7_151o6"]
[ext_resource type="PackedScene" uid="uid://cq61hnxmnu2nk" path="res://UI/Computer/Difficulty.tscn" id="9_1567r"]
[ext_resource type="PackedScene" uid="uid://de8jud5erkt8n" path="res://UI/Computer/Used_Car_Shop.tscn" id="10_gld2b"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q6dxs"]
bg_color = Color(0.658824, 0.654902, 0.615686, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hdbc0"]
bg_color = Color(0.588235, 0.584314, 0.54902, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.0705882)
shadow_size = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0fcxx"]
bg_color = Color(0.658824, 0.654902, 0.615686, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.0705882)
shadow_size = 5
anti_aliasing = false

[node name="Webbrowser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_iqbph")

[node name="Browser Background Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 319.0
offset_right = 2241.0
offset_bottom = 1440.0
theme_override_styles/panel = SubResource("StyleBoxFlat_q6dxs")

[node name="Browser Top panel" type="Panel" parent="Browser Background Panel"]
layout_mode = 0
offset_left = 108.0
offset_top = 10.0
offset_right = 1910.0
offset_bottom = 90.0
theme_override_styles/panel = SubResource("StyleBoxFlat_hdbc0")

[node name="Back Button" type="Button" parent="."]
layout_mode = 0
offset_left = 330.0
offset_top = 10.0
offset_right = 410.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0.94902, 0.941176, 0.894118, 1)
theme_override_colors/font_pressed_color = Color(0.94902, 0.941176, 0.894118, 1)
theme_override_colors/font_hover_color = Color(0.94902, 0.941176, 0.894118, 1)
theme_override_colors/font_focus_color = Color(0.94902, 0.941176, 0.894118, 1)
theme_override_colors/font_hover_pressed_color = Color(0.94902, 0.941176, 0.894118, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_0fcxx")
text = "<--"

[node name="Page Selector" type="Control" parent="." node_paths=PackedStringArray("page_selector", "page_shop", "page_inventory", "page_difficulty", "page_used_car_shop", "pagename")]
anchors_preset = 0
offset_left = 330.0
offset_top = 89.0
offset_right = 2230.0
offset_bottom = 1430.0
theme = ExtResource("2_fxky7")
script = ExtResource("3_uyab6")
page_selector = NodePath("Selector")
page_shop = NodePath("../Shop")
page_inventory = NodePath("../Inventory")
page_difficulty = NodePath("../Difficulty")
page_used_car_shop = NodePath("../Used Car Shop")
pagename = NodePath("../Website Name")

[node name="Selector" type="Panel" parent="Page Selector"]
layout_mode = 0
offset_top = 11.0
offset_right = 1900.0
offset_bottom = 1341.0

[node name="GridContainer" type="GridContainer" parent="Page Selector/Selector"]
layout_mode = 0
offset_left = 111.449
offset_top = 63.551
offset_right = 321.449
offset_bottom = 202.551
scale = Vector2(8, 8)
theme_override_constants/v_separation = 15
columns = 2

[node name="Shop Button" type="Button" parent="Page Selector/Selector/GridContainer"]
layout_mode = 2
icon = ExtResource("3_70prc")

[node name="Inventory Button" type="Button" parent="Page Selector/Selector/GridContainer"]
layout_mode = 2
icon = ExtResource("4_0xncc")

[node name="Difficulty Button" type="Button" parent="Page Selector/Selector/GridContainer"]
layout_mode = 2
icon = ExtResource("6_1mjm5")

[node name="Used Car Shop Button" type="Button" parent="Page Selector/Selector/GridContainer"]
layout_mode = 2
icon = ExtResource("6_1mjm5")

[node name="Shop" parent="." instance=ExtResource("2_6pl0m")]
visible = false
layout_mode = 1

[node name="Inventory" parent="." instance=ExtResource("7_151o6")]
visible = false
layout_mode = 1

[node name="Difficulty" parent="." instance=ExtResource("9_1567r")]
visible = false
layout_mode = 1

[node name="Used Car Shop" parent="." instance=ExtResource("10_gld2b")]
visible = false
layout_mode = 1

[node name="Website Name" type="Label" parent="."]
layout_mode = 0
offset_left = 450.0
offset_top = 14.0
offset_right = 835.0
offset_bottom = 78.0
theme_override_colors/font_color = Color(0.94902, 0.941176, 0.894118, 1)
text = "https://gooble.com"

[connection signal="pressed" from="Back Button" to="Page Selector" method="_on_back_button_pressed"]
[connection signal="pressed" from="Page Selector/Selector/GridContainer/Shop Button" to="Page Selector" method="_on_shop_button_pressed"]
[connection signal="pressed" from="Page Selector/Selector/GridContainer/Inventory Button" to="Page Selector" method="_on_inventory_button_pressed"]
[connection signal="pressed" from="Page Selector/Selector/GridContainer/Difficulty Button" to="Page Selector" method="_on_difficulty_button_pressed"]
[connection signal="pressed" from="Page Selector/Selector/GridContainer/Used Car Shop Button" to="Page Selector" method="_on_used_car_shop_button_pressed"]
